# homelab-cmdb

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmdb/: config.py
cmdb/cli/: collect.py  db.py  demo.py  export.py  generate.py  hosts.py  images.py  import_.py  k8s.py  main.py
cmdb/db/: __init__.py  session.py
cmdb/db/migrations/: env.py
cmdb/db/migrations/versions/: 2ce8841f0356_initial.py  361f830adeac_add_k8s_namespace_and_import_log_k8s_.py  50f23d7d5a7c_add_containers_and_host_snapshots.py  a1d2e3f4b5c6_add_vuln_snapshots.py  a7b8c9d0e1f2_add_k8s_workloads.py  b7e4d9c1a2f3_add_tailscale_and_listening_ports.py  b8c9d0e1f2a3_add_host_notes_custom_fields.py  c1a2b3d4e5f6_add_image_scans.py  d2f3a4b5c6e7_add_image_scan_source.py  e3a4b5c6d7f8_canonicalize_image_refs.py  f4a5b6c7d8e9_add_image_scan_host.py
cmdb/demo/: seed.py
cmdb/demo/data/: ports.json  tailscale.json
cmdb/demo/data/ansible/run1/: atlas.json  hydra.json  lyra.json  orion.json  rho.json
cmdb/demo/data/ansible/run2/: hydra.json  orion.json  rho.json  vega.json
cmdb/demo/data/docker/: atlas.json  vega.json
cmdb/demo/data/k8s/: meridian.json
cmdb/demo/data/trivy/: docker-atlas.json  registry-zot.json
cmdb/domain/: models.py  refs.py  schemas.py
cmdb/domain/services/: ansible.py  collect.py  dashboard.py  docker_import.py  export.py  generate.py  history.py  hosts.py  images.py  k8s.py  k8s_import.py  network.py  ports_import.py  search.py  security.py  storage.py  tailscale_import.py  topology.py  trivy_import.py  vuln_snapshots.py
cmdb/mcp/: __init__.py  schemas.py  server.py
cmdb/web/: app.py  deps.py
cmdb/web/routes/: api.py  collect.py  containers.py  dashboard.py  generate.py  hosts.py  images.py  import_.py  k8s.py  network.py  search.py  settings.py  topology.py
cmdb/web/static/: SHA256SUMS
cmdb/web/static/css/: main.css  topology.css
cmdb/web/static/js/: topology.js
cmdb/web/static/vendor-licenses/: README.md
cmdb/web/templates/: _breadcrumbs.html  _deployments.html  _empty_state.html  base.html  dashboard.html
cmdb/web/templates/charts/: _macros.html
cmdb/web/templates/collect/: index.html
cmdb/web/templates/containers/: index.html
cmdb/web/templates/generate/: index.html
cmdb/web/templates/hosts/: _custom_fields.html  _notes.html  _table.html  _tag_list.html  detail.html  list.html
cmdb/web/templates/images/: detail.html  list.html
cmdb/web/templates/import/: index.html
cmdb/web/templates/k8s/: index.html
cmdb/web/templates/network/: index.html
cmdb/web/templates/search/: _results.html  results.html
cmdb/web/templates/settings/: index.html
cmdb/web/templates/topology/: index.html
data/: .gitkeep
docs/: ROADMAP.md  image-scanning.md
docs/design/: images-stale-badge-and-delete.md  vuln-trend-snapshots.md
docs/superpowers/plans/: 2026-06-03-homelab-cmdb.md
docs/superpowers/specs/: 2026-06-03-homelab-cmdb-design.md
scripts/: docker-export.sh  k8s-export.sh  trivy-scan-registry.sh  trivy-scan.sh  vendor-assets.sh
scripts/systemd/: homelabcmdb-image-scan.service  homelabcmdb-image-scan.timer
tests/: conftest-example.py  conftest.py  test_ansible_import-example.py  test_ansible_import.py  test_api.py  test_canonicalize_migration.py  test_cli_collect-example.py  test_cli_export.py  test_cli_hosts.py  test_cli_images.py  test_cli_serve.py  test_collect-example.py  test_dashboard_service.py  test_demo.py  test_docker_import-example.py  test_export_service.py  test_generate_service-example.py  test_generate_service.py  test_history-example.py  test_hosts_service-example.py  test_hosts_service.py  test_image_models.py  test_images_service.py  test_k8s_import-example.py  test_k8s_import.py  test_k8s_service-example.py  test_k8s_service.py  test_k8s_workloads.py  test_mcp-example.py  test_mcp_images.py  test_migrations-example.py  test_models_smoke-example.py  test_models_smoke.py  test_network_service.py  test_ports_import-example.py  test_search_service.py  test_security-example.py  test_storage_service.py  test_tailscale_import-example.py  test_topology_service.py  (+7 more)
