[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-cmdb"
version = "0.1.0"
description = "Homelab CMDB   Ansible-fed, SQLite-backed inventory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
cmdb = "cmdb.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["cmdb"]
