[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-cmdb"
version = "0.3.2"
description = "Homelab CMDB Ansible-fed, SQLite-backed inventory"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/osaljehani/homelab-cmdb"
Repository = "https://github.com/osaljehani/homelab-cmdb"
Issues = "https://github.com/osaljehani/homelab-cmdb/issues"
Changelog = "https://github.com/osaljehani/homelab-cmdb/blob/master/CHANGELOG.md"

[project.scripts]
cmdb = "cmdb.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
# Optional: enables `cmdb collect` (agentless collection over SSH).
collect = [
    # Pinned <2.21: the paramiko connection plugin (the only binary-free general
    # SSH transport) was removed in ansible-core 2.21, and the distroless runtime
    # ships no openssh-client binary. 2.20 still supports a 3.13 controller.
    "ansible-core>=2.16,<2.21",
    # paramiko drives that pure-Python SSH connection (transport=paramiko) so the
    # image needs no openssh-client — see Dockerfile.
    "paramiko>=3.5",
]
# Optional: enables `cmdb mcp` (Model Context Protocol server over stdio).
mcp = [
    "mcp>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# *-example.py are illustrative scrubbed copies of the gitignored real tests; not collected.
addopts = "--ignore-glob=*-example.py"

[tool.hatch.build.targets.wheel]
packages = ["cmdb"]
